2022-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* R/Attributes.R (sourceCpp): Protect path to binary from spaces

2022-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/tinytest/test_dataframe.R (test.DataFrame.PushZeroLength): Add
	new test
	* inst/tinytest/cpp/DataFrame.cpp (DataFrame_PushOnEmpty): C++
	support for new test

2022-10-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/DataFrame.h (set_type_after_push): Allow zero-row
	data.frame objects to be grown by push_{back,front}()

2022-09-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2022-09-23  Kevin Ushey  <kevinushey@gmail.com>

	* R/Module.R: Force 'finalize' method to be materialized

2022-09-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

	* R/Attributes.R: Support C++20, C++23 and C++2b (for experimental /
	incomplete support) via new plugins

2022-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h: Idem

2022-07-23  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/r/headers.h: Unwind protection is enabled by default
	unless `RCPP_NO_UNWIND_PROTECT` is defined (`RCPP_USE_UNWIND_PROTECT` is
	not checked anymore and has no effect)
	* inst/include/Rcpp/vector/Vector.h: Switch evaluation to `Rcpp_eval`
	* R/Attributes.R: `[[Rcpp::plugins(unwindProtect)]]` is deprecated
	* inst/tinytest/cpp/stack.cpp: Adapted
	* inst/tinytest/test_exceptions.R: Adapted
	* inst/tinytest/test_interface.R: Adapted
	* inst/tinytest/testRcppInterfaceExporter/src/config.h: Removed

2022-07-10  Dirk Eddelbuettel  <edd@debian.org>
